# fastapi_assignment

./: .dmypy.json  .env  .gitignore  main.py  pyproject.toml  study_note.txt  test.sh
.github/workflows/: ci.yml
Day1/: main.py
Day1/app/models/: users.py
Day1/app/schemas/: users.py
Day2/: main.py
Day2/app/: main.py
Day2/app/models/: movies.py  users.py
Day2/app/router/: movies.py  users.py
Day2/app/tests/: test_movie_router.py  test_movie_router_day2.py
Day3/: study_note.txt
Day3/app/: main.py
Day3/app/models/: movies.py  users.py
Day3/app/routers/: movies.py  users.py
Day3/app/schemas/: movies.py  users.py
Day3/app/tests/: test_movie_router_day3.py
Day3/app/utils/: jwt.py
Day4/: study_note.txt
Day4/app/: main.py
Day4/app/configs/: database.py
Day4/app/models/: base.py  movies.py  users.py
Day4/app/routers/: movies.py  users.py
Day4/app/schemas/: movies.py  users.py
Day4/app/tests/: test_movie_router_day4.py
Day4/app/utils/: auth.py  jwt.py
Day5/: study_note.txt
Day5/app/: main.py
Day5/app/configs/: __init__.py  base.py  database.py
Day5/app/models/: movies.py  users.py
Day5/app/routers/: movies.py  users.py
Day5/app/schemas/: movies.py  users.py
Day5/app/services/: file.py
Day5/app/tests/: test_movie_router.py  test_user_router.py
Day5/app/tests/utils/: fake_file.py
Day5/app/utils/: auth.py  file.py  jwt.py
Day6/: study_note.txt
Day6/app/: main.py
Day6/app/configs/: __init__.py  base.py  database.py
Day6/app/models/: likes.py  movies.py  reviews.py  users.py
Day6/app/routers/: likes.py  movies.py  reviews.py  users.py
Day6/app/schemas/: likes.py  movies.py  reviews.py
Day6/app/services/: file.py
Day6/app/tests/: test_movie_router.py  test_user_router.py
Day6/app/utils/: auth.py  file.py  jwt.py
Day7/: study_note.txt
Day8/: study_note.txt
migrations/models/: 0_20250821202351_init.py
