[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["kickcik <4778009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
poetry-core = "^2.1.3"
requests = "^2.32.5"
urllib3 = "^2.5.0"
certifi = "^2025.8.3"
httpx = "^0.28.1"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
pydantic-settings = "^2.10.1"
tortoise-orm = {extras = ["asyncmy"], version = "^0.25.1"}
cryptography = "^45.0.6"
aerich = "^0.9.1"
tomlkit = "^0.13.3"
python-multipart = "^0.0.20"
pillow = "^11.3.0"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
pytest = "8.3.4"
requests = "^2.32.5"
coverage = "7.6.9"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ['pydantic.mypy']
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
[tool.aerich]
tortoise_orm = "Day5.app.configs.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
